ejecutar.txt
Corrige este error al instalar en cliente:
File "/home/profesor/Escritorio/vigia-master/client.py", line 115
    global _XDO_CMD
    ^^^^^^^^^^^^^^^
SyntaxError: name '_XDO_CMD' is used prior to global declaration
